--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -32,6 +32,6 @@
     </ion-item>
   </ion-card>
   <br>
-  <button ion-button block color="danger" (click)="apagar()">Apagar Dados</button>
+  <button ion-button block color="danger" (click)="apagar()">Limpar Dados</button>
   <p text-center>Clique para apagar todos os Dados do App!</p>
 </ion-content>
