--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -44,7 +44,7 @@
     </ion-list>
     <ion-list>
       <ion-item>
-        <ion-label>Livre</ion-label>
+        <ion-label>Disponível</ion-label>
         <ion-input readonly [(ngModel)]="percRendaRestante" text-right></ion-input>
       </ion-item>
     </ion-list>
