--- a/src/pages/intro/intro.html
+++ b/src/pages/intro/intro.html
@@ -1,6 +1,21 @@
-<ion-content padding>
-  <ion-slides pager>
+<ion-content>
+  <ion-slides pager  paginationType="bullets" effect="slide" centeredSlides="true">
 
+    <ion-slide class="principal">
+      <img src="assets/imgs/ConsignApp.png" alt="" />
+    </ion-slide>
+    <ion-slide>
+      <img src="assets/imgs/1.png" alt="" />
+    </ion-slide>
+    <ion-slide>
+      <img src="assets/imgs/2.png" alt="" />
+    </ion-slide>
+    <ion-slide>
+      <img src="assets/imgs/3.png" alt="" />
+    </ion-slide>
+    <ion-slide>
+      <img src="assets/imgs/4.png" alt="" />
+    </ion-slide>
     <ion-slide class="slide_image">
       <img src="assets/imgs/ica-slidebox-img-1.png" alt="" />
       <h2>Meu app Fantastico</h2>
