--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,7 +5,6 @@
     </ion-title>
   </ion-navbar>
 </ion-header>
-
 <ion-content padding>
   <ion-card>
     <ion-card-header style="text-align: center" class="cabecalho">
@@ -45,7 +44,7 @@
     <ion-list>
       <ion-item>
         <ion-label>Disponível</ion-label>
-        <ion-input readonly [(ngModel)]="percRendaRestante" text-right></ion-input>
+        <ion-input readonly [(ngModel)]="percRendaDisponivel" text-right></ion-input>
       </ion-item>
     </ion-list>
   </ion-card>
