--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar color="primary">
+  <ion-navbar color="primary" text-center>
     <ion-title>Informações</ion-title>
   </ion-navbar>
 </ion-header>
@@ -33,13 +33,13 @@
   <ion-card>
     <ion-row center>
       <ion-col>
-        <p text-center>Clique no botão abaixo para iniciar novamente o Tutorial!</p>
+        <p text-center>Clique no botão abaixo para iniciar novamente o Tutorial na próxima vez que você iniciar o App!</p>
       </ion-col>
     </ion-row>
     <ion-row center>
       <ion-col>
         <button ion-button icon-left color="secondary" class="button" (click)="tutorial()">
-          <div>Iniciar Tutorial</div>
+          <div>Ativar Tutorial</div>
         </button>
       </ion-col>
     </ion-row>
