--- a/src/pages/intro/intro.html
+++ b/src/pages/intro/intro.html
@@ -4,24 +4,27 @@
       <img src="assets/imgs/ConsignApp.png" alt="" />
     </ion-slide>
     <ion-slide>
-      <img src="assets/imgs/1.jpeg" alt="" />
+      <img src="assets/imgs/intro01.png" alt="" />
     </ion-slide>
     <ion-slide>
-      <img src="assets/imgs/2.jpeg" alt="" />
+      <img src="assets/imgs/intro02.png" alt="" />
     </ion-slide>
     <ion-slide>
-      <img src="assets/imgs/3.jpeg" alt="" />
+      <img src="assets/imgs/intro03.png" alt="" />
     </ion-slide>
     <ion-slide>
-      <img src="assets/imgs/4.jpeg" alt="" />
+      <img src="assets/imgs/intro04.png" alt="" />
     </ion-slide>
-    <ion-slide class="fim">
-      <img src="assets/imgs/ConsignApp.png" alt="" />
+    <ion-slide>
+      <img src="assets/imgs/intro05.png" alt="" />
+    </ion-slide>
+    <ion-slide class="fim" padding>
+      <ion-img width="240" height="240" src="assets/imgs/logo.png"></ion-img>
       <h1><b>Consign</b><i>App</i></h1>
       <div>
         <p class="teste2">Este Aplicativo foi desenvolvido para o Concurso de Apps CIDADATA - Uso de Dados para
           Cidadania Financeira</p>
-        <button ion-button icon-start color="dark" (click)="goToTabsPage()">
+        <button ion-button icon-start light color="dark" (click)="goToTabsPage()">
           <ion-icon name="logo-usd"></ion-icon>
           Ir para o App
         </button>
