--- a/src/pages/despesa/despesa.html
+++ b/src/pages/despesa/despesa.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar color="primary">
+  <ion-navbar color="primary" text-center>
     <ion-title>Despesas</ion-title>
   </ion-navbar>
 </ion-header>
