--- a/src/pages/edit/edit.html
+++ b/src/pages/edit/edit.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar color="primary">
+  <ion-navbar color="primary" text-center>
     <ion-title>{{ transacao }} {{ origem }}</ion-title>
   </ion-navbar>
 </ion-header>
