--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -22,6 +22,12 @@
         <ion-input readonly [(ngModel)]="totalDespesas" text-right></ion-input>
       </ion-item>
     </ion-list>
+    <ion-list>
+      <ion-item>
+        <ion-label>Consignado</ion-label>
+        <ion-input readonly [(ngModel)]="totalConsignado" text-right></ion-input>
+      </ion-item>
+    </ion-list>
   </ion-card>
   <ion-card>
     <ion-list>
