If para alterar fundo item despesa
If para alteração do background na lista de despsas para quando for um consignado.

--- a/src/pages/despesa/despesa.html
+++ b/src/pages/despesa/despesa.html
@@ -6,7 +6,7 @@
 <ion-content padding>
   <ion-list>
     <ion-item-sliding *ngFor="let item of caixas">
-      <ion-item>
+      <ion-item  [ngStyle]="{'background-color': item.caixa.ehConsignado ? 'green' : 'red' }">
         <h2>{{ item.caixa.descricao }}</h2>
         <p text-right>{{ item.caixa.valor | currency:'BRL':'symbol':'1.2' }}</p>
       </ion-item>
