--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -16,6 +16,8 @@
         <ion-input readonly [(ngModel)]="totalRendas" text-right></ion-input>
       </ion-item>
     </ion-list>
+  </ion-card>
+  <ion-card>
     <ion-list>
       <ion-item>
         <ion-label>Despesas</ion-label>
