--- a/src/pages/renda/renda.html
+++ b/src/pages/renda/renda.html
@@ -7,8 +7,18 @@
   <ion-list>
     <ion-item-sliding *ngFor="let item of caixas">
       <ion-item>
-        <h2>{{ item.caixa.descricao }}</h2>
-        <p text-right>{{ item.caixa.valor | currency:'BRL':'symbol':'1.2' }}</p>
+        <ion-grid>
+          <ion-row>
+            <h2>{{ item.caixa.descricao }}</h2>
+          </ion-row>
+          <ion-row>
+            <ion-col>
+            </ion-col>
+            <ion-col>
+              <p text-right>{{ item.caixa.valor | currency:'BRL':'symbol':'1.2' }}</p>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
       </ion-item>
       <ion-item-options side="right">
         <button ion-button color="danger" (click)="removeRenda(item);">
@@ -20,11 +30,6 @@
       </ion-item-options>
     </ion-item-sliding>
   </ion-list>
-  <ion-fab bottom right>
-    <button ion-fab (click)="addRenda()">
-      <ion-icon name="add"></ion-icon>
-    </button>
-  </ion-fab>
   <ion-fab bottom right>
     <button ion-fab (click)="addRenda()">
       <ion-icon name="add"></ion-icon>
