--- a/src/pages/consulta/consulta.html
+++ b/src/pages/consulta/consulta.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar color="primary" text-center>
-    <ion-title>Consulta de Taxas</ion-title>
+    <ion-title text-wrap>Consulta de Taxas</ion-title>
   </ion-navbar>
 </ion-header>
 <ion-content padding>
