--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,8 +5,8 @@
     </ion-title>
   </ion-navbar>
 </ion-header>
-<ion-content padding>
-  <ion-card>
+<ion-content padding class="principal-custom">
+  <ion-card class="card">
     <ion-card-header style="text-align: center" class="cabecalho">
       Cálculo Rápido
     </ion-card-header>
@@ -15,28 +15,37 @@
         <ion-label>Renda</ion-label>
         <ion-input readonly [(ngModel)]="totalRendas" text-right></ion-input>
       </ion-item>
-    </ion-list>
-  </ion-card>
-  <ion-card>
-    <ion-list>
+      <ion-list>
       <ion-item>
         <ion-label>Despesas</ion-label>
         <ion-input readonly [(ngModel)]="totalDespesas" text-right></ion-input>
       </ion-item>
     </ion-list>
-    <ion-list>
+      <ion-list>
       <ion-item>
         <ion-label>Consignado</ion-label>
         <ion-input readonly [(ngModel)]="totalConsignado" text-right></ion-input>
       </ion-item>
     </ion-list>
-  </ion-card>
-  <ion-card>
-    <ion-list>
+      <ion-list>
       <ion-item>
         <ion-label>Restante</ion-label>
         <ion-input readonly [(ngModel)]="restanteValor" text-right></ion-input>
       </ion-item>
+    </ion-list>
+    </ion-list>
+  </ion-card>
+  <ion-card>
+    <ion-list>
+     
+    </ion-list>
+    <ion-list>
+
+    </ion-list>
+  </ion-card>
+  <ion-card>
+    <ion-list>
+
     </ion-list>
   </ion-card>
   <ion-card>
