--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -16,36 +16,23 @@
         <ion-input readonly [(ngModel)]="totalRendas" text-right></ion-input>
       </ion-item>
       <ion-list>
-      <ion-item>
-        <ion-label>Despesas</ion-label>
-        <ion-input readonly [(ngModel)]="totalDespesas" text-right></ion-input>
-      </ion-item>
-    </ion-list>
+        <ion-item>
+          <ion-label>Despesas</ion-label>
+          <ion-input readonly [(ngModel)]="totalDespesas" text-right></ion-input>
+        </ion-item>
+      </ion-list>
       <ion-list>
-      <ion-item>
-        <ion-label>Consignado</ion-label>
-        <ion-input readonly [(ngModel)]="totalConsignado" text-right></ion-input>
-      </ion-item>
-    </ion-list>
+        <ion-item>
+          <ion-label>Consignado</ion-label>
+          <ion-input readonly [(ngModel)]="totalConsignado" text-right></ion-input>
+        </ion-item>
+      </ion-list>
       <ion-list>
-      <ion-item>
-        <ion-label>Restante</ion-label>
-        <ion-input readonly [(ngModel)]="restanteValor" text-right></ion-input>
-      </ion-item>
-    </ion-list>
-    </ion-list>
-  </ion-card>
-  <ion-card>
-    <ion-list>
-     
-    </ion-list>
-    <ion-list>
-
-    </ion-list>
-  </ion-card>
-  <ion-card>
-    <ion-list>
-
+        <ion-item>
+          <ion-label>Restante</ion-label>
+          <ion-input readonly [(ngModel)]="restanteValor" text-right></ion-input>
+        </ion-item>
+      </ion-list>
     </ion-list>
   </ion-card>
   <ion-card>
@@ -61,7 +48,8 @@
     <ion-list>
       <ion-item>
         <ion-label>Disponível</ion-label>
-        <ion-input readonly [(ngModel)]="percRendaDisponivel" text-right></ion-input>
+        <!--<ion-input readonly [(ngModel)]="percRendaDisponivel" text-right></ion-input>-->
+        <ion-input [ngStyle]="{'color': ((valorDisponivel <= 0.40) && (valorDisponivel >= 0.15)) ? 'orange' : (valorDisponivel <= 0.15 ? 'red' : 'green')}" readonly [(ngModel)]="percRendaDisponivel" text-right></ion-input>
       </ion-item>
     </ion-list>
   </ion-card>
