--- a/src/pages/consulta/consulta.html
+++ b/src/pages/consulta/consulta.html
@@ -9,7 +9,7 @@
     <ion-row text-center>
       <ion-col>
         <button ion-button icon-left small (click)="dados('selicDia')">
-          <ion-icon name="md-calendar"></ion-icon>
+          <ion-icon name="md-calendar" color=white></ion-icon>
           <div>Dia</div>
         </button>
       </ion-col>
