--- a/src/pages/renda/renda.html
+++ b/src/pages/renda/renda.html
@@ -8,7 +8,7 @@
     <ion-item-sliding *ngFor="let item of caixas">
       <ion-item>
         <h2>{{ item.caixa.descricao }}</h2>
-        <p text-right>{{ item.caixa.valor | currency:'BRL':'symbol':'1.2' }}</p>
+        <p>{{ item.caixa.valor | currency:'BRL':'symbol':'1.2' }}</p>
       </ion-item>
       <ion-item-options side="right">
         <button ion-button color="danger" (click)="removeRenda(item);">
