--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -24,13 +24,13 @@
       <ion-list>
         <ion-item>
           <ion-label>Consignado</ion-label>
-          <ion-input readonly [(ngModel)]="totalConsignado" text-right></ion-input>
+          <ion-input readonly [(ngModel)]="totalConsignados" text-right></ion-input>
         </ion-item>
       </ion-list>
       <ion-list>
         <ion-item>
           <ion-label>Restante</ion-label>
-          <ion-input readonly [(ngModel)]="restanteValor" text-right></ion-input>
+          <ion-input readonly [(ngModel)]="valorRestante" text-right></ion-input>
         </ion-item>
       </ion-list>
     </ion-list>
