--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,7 +8,7 @@
 <ion-content padding class="principal-custom">
   <ion-card class="card">
     <ion-card-header style="text-align: center" class="cabecalho">
-      Cálculo Rápido
+      Resumo Rápido
     </ion-card-header>
     <ion-list>
       <ion-item>
@@ -17,7 +17,7 @@
       </ion-item>
       <ion-list>
         <ion-item>
-          <ion-label>Despesas</ion-label>
+          <ion-label>Despesa</ion-label>
           <ion-input readonly [(ngModel)]="totalDespesas" text-right></ion-input>
         </ion-item>
       </ion-list>
