--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,5 @@
 <ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
+  <ion-tab [root]="tab1Root" tabTitle="Principal" tabIcon="home"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Renda" tabIcon="cash"></ion-tab>
   <ion-tab [root]="tab3Root" tabTitle="Despesa" tabIcon="pricetags"></ion-tab>
   <ion-tab [root]="tab4Root" tabTitle="Consulta" tabIcon="search"></ion-tab>
