Update: Publicando Versão 0.0.4
Remover o Console:
> ionic cordova plugin rm cordova-plugin-console

Gerar o APK versão release:
> ionic cordova build --release android

Ir para a Pasta que gerou a APK, lá está a Chave Privada gerada anteriormente, lembrando que só vai atualizar o App se usar a mesma Chave

Assinar a APK:
> jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 -keystore ConsignApp-key.keystore app-release-unsigned.apk ConsignApp

Otimizar a APK:
> zipalign -v 4 app-release-unsigned.apk ConsignApp.apk

Referência: https://ionicframework.com/docs/v1/guide/publishing.html

--- a/src/pages/despesa/despesa.html
+++ b/src/pages/despesa/despesa.html
@@ -10,7 +10,7 @@
       <ion-item [ngStyle]="{'color': item.caixa.ehConsignado ? '#33B55B' : ''}">
         <h2>{{ item.caixa.descricao }}</h2>
         <ion-row>
-          <ion-col text-left>{{ item.caixa.valor | currency:'BRL':'symbol':'1.2' }}</ion-col>
+          <ion-col text-left><p>{{ item.caixa.valor | currency:'BRL':'symbol':'1.2' }}</p></ion-col>
           <ion-col text-right>
             <ion-badge *ngIf="item.caixa.ehConsignado">Consignado</ion-badge>
           </ion-col>
