Update: Publicando Versão 0.0.6
> Alterando o back em Editar
> Corrigindo o Bug de cadastrar qualquer Despesa maior que 35%
> Removendo função de Alerta (nao usada)
> Pequenos Ajustes

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -57,4 +57,9 @@
       </ion-col>
     </ion-row>
   </ion-card>
+  <ion-row center>
+    <ion-col>
+      <ion-badge><b>Consign</b><i>App</i> 0.0.6</ion-badge>
+    </ion-col>
+  </ion-row>
 </ion-content>
