--- a/src/pages/renda/renda.html
+++ b/src/pages/renda/renda.html
@@ -9,7 +9,9 @@
       <ion-item>
         <h2>{{ item.caixa.descricao }}</h2>
         <ion-row>
-          <ion-col text-left><p>{{ item.caixa.valor | currency:'BRL':'symbol':'1.2' }}</p></ion-col>
+          <ion-col text-left>
+            <p>{{ item.caixa.valor | currency:'BRL':'symbol':'1.2' }}</p>
+          </ion-col>
           <ion-col text-right>
           </ion-col>
         </ion-row>
