Update: Preparando Versão 0.0.7
> Removido getAll;
> Todo tratamento dos valores é feito pelo localstorage;
> Atualizado o Intro;

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -38,7 +38,7 @@
     </ion-row>
     <ion-row center>
       <ion-col>
-        <button ion-button icon-left color="secondary" class="button" (click)="tutorial()">
+        <button ion-button icon-left round color="secondary" class="button" (click)="tutorial()">
           <div>Ativar Tutorial</div>
         </button>
       </ion-col>
@@ -51,7 +51,7 @@
     </ion-row>
     <ion-row center>
       <ion-col>
-        <button ion-button icon-left color="danger" (click)="apagar()">
+        <button ion-button icon-left round color="danger" (click)="apagar()">
           <div>Limpar Dados</div>
         </button>
       </ion-col>
@@ -59,7 +59,7 @@
   </ion-card>
   <ion-row center>
     <ion-col>
-      <ion-badge><b>Consign</b><i>App</i> 0.0.6</ion-badge>
+      <ion-badge><b>Consign</b><i>App</i> 0.0.7e</ion-badge>
     </ion-col>
   </ion-row>
 </ion-content>
