--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -33,7 +33,7 @@
       <ion-list>
         <ion-item class="negrito">
           <ion-label>Saldo</ion-label>
-          <ion-input readonly [(ngModel)]="valorRestante" text-right></ion-input>
+          <ion-input readonly [(ngModel)]="valorSaldo" text-right></ion-input>
           <ion-icon item-end small name="calculator"></ion-icon>
         </ion-item>
       </ion-list>
