--- a/src/pages/intro/intro.html
+++ b/src/pages/intro/intro.html
@@ -1,21 +1,21 @@
 <ion-content>
   <ion-slides pager paginationType="bullets" effect="slide" centeredSlides="true">
-    <ion-slide class="inicio">
-      <img src="assets/imgs/ConsignApp.png" alt="" />
+    <ion-slide class="intro-inicio" padding>
+        <img src="assets/imgs/ConsignApp.png" alt="" />
     </ion-slide>
-    <ion-slide>
-      <img src="assets/imgs/intro01.png" alt="" />
+    <ion-slide padding>
+        <img src="assets/imgs/intro01.png" alt="" />
     </ion-slide>
-    <ion-slide>
+    <ion-slide padding>
       <img src="assets/imgs/intro02.png" alt="" />
     </ion-slide>
-    <ion-slide>
+    <ion-slide padding>
       <img src="assets/imgs/intro03.png" alt="" />
     </ion-slide>
-    <ion-slide>
+    <ion-slide padding>
       <img src="assets/imgs/intro04.png" alt="" />
     </ion-slide>
-    <ion-slide class="fim" padding>
+    <ion-slide class="intro-fim" padding>
       <ion-img width="240" height="240" src="assets/imgs/logo.png"></ion-img>
       <h1><b>Consign</b><i>App</i></h1>
       <div>
